objects/User.object
<CustomObject>
    <fields>
        <fullName>Default_Sighting_Location__c</fullName>
        <label>Default Sighting Location</label>
        <required>true</required>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Sightings_Validated__c</fullName>
        <description>Amount of sightings that have been validated by the user if he has a Validation Specialization.</description>
        <label>Sightings Validated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Validation_Specialization__c</fullName>
        <description>Species Group for which this user may validate sightings data.</description>
        <label>Validator Specialization</label>
        <picklist>
            <picklistValues>
                <fullName>Mammals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fungi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arachnids</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Butterflies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dragonflies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diptera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hymenoptera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other invertebrates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birds</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
</CustomObject>